<resources>
    <string name="app_name">HealthHub</string>
    <string name="set_medication_add_edit_screen_title">Edit/ Add</string>
    <string name="set_medication_screen_title">Medication</string>
    <string name="medication_reminder_screen_title">Today\'s Medication</string>
    <string name="set_medication_add_edit_name_label">Name:</string>
    <string name="set_medication_add_edit_name_label_hint">Medication Name</string>
    <string name="set_medication_add_edit_quantity_label">Quantity:</string>
    <string name="set_medication_add_edit_quantity_label_hint">Medication quantity</string>
    <string name="set_medication_add_edit_duration_label">Duration</string>
    <string name="set_medication_add_edit_from_label">From:</string>
    <string name="set_medication_add_edit_to_label">To:</string>
    <string name="set_medication_add_edit_date_label_hint">DD/MM/YYYY</string>
    <string name="set_medication_add_edit_until_deletion_label">Until Deletion</string>
    <string name="set_medication_add_edit_day_label">Day</string>
    <string name="set_medication_add_edit_every_label">Every</string>
    <string name="set_medication_add_edit_days_label">day(s)</string>
    <string name="set_medication_add_edit_custom_label">Custom</string>
    <string name="set_medication_add_edit_time_label">Time</string>

    <string name="logout">LOGOUT</string>

    <string name="hello">Hello there \nWhat would you like to do? </string>

    <string name="set_medication_add_edit_add_button">Add</string>
    <string name="cntctName">Contact Name Here</string>
    <string name="cntctPhone">Contact Phone Number Here</string>

    <string name="set_medication_add_edit_save_button">Save</string>
    <string name="title_activity_maps_test">MapsActivityTest</string>
    <string name="set_Home_btn">Set Home</string>
    <string name="set_Medication_btn">Set Medication</string>
    <string name="set_Favorite_Contacts_btn">Set Favorite           Contacts</string>
    <string name="set_Personal_Info_btn">Set Personal Information</string>
    <string name="no_medications_today">No Medications for Today!</string>

</resources>