<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!-- THIS SCROLL VIEW WILL HAVE ALL THE BUTTONS -->
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="18dp"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_btn"
                android:text="@string/logout"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/greeting_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hello"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>


        <!--  SET PERSONAL INFO BUTTON   -->
        <FrameLayout
            android:id="@+id/set_Personal_Info"
            android:layout_width="380dp"
            android:layout_height="160dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">

            <ImageButton
                android:id="@+id/set_Personal_Info_btn"
                android:layout_width="380dp"
                android:layout_height="160dp"
                android:backgroundTint="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/personal_info"
                android:text="@string/set_Personal_Info_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#66FFFFFF"
                android:backgroundTint="@color/white"
                android:text="@string/set_Personal_Info_btn"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:tint="@color/black" />

        </FrameLayout>


        <!--  SET FAVORITE CONTACTS BUTTON   -->
        <FrameLayout
            android:id="@+id/set_Favorite_Contacts"
            android:layout_width="380dp"
            android:layout_height="160dp"
            android:layout_marginBottom="25dp">

            <ImageButton
                android:id="@+id/set_Fav_Contacts_btn"
                android:layout_width="380dp"
                android:layout_height="160dp"
                android:backgroundTint="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/family"
                app:layout_constraintVertical_bias="0.93" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#66FFFFFF"
                android:text="@string/set_Favorite_Contacts_btn"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:tint="@color/black" />

        </FrameLayout>

        <!--  SET MEDICATION BUTTON  -->
        <FrameLayout
            android:id="@+id/set_Medication"
            android:layout_width="380dp"
            android:layout_height="160dp"
            android:layout_marginBottom="25dp">

            <ImageButton
                android:id="@+id/set_Medication_btn"
                android:layout_width="380dp"
                android:layout_height="160dp"
                android:backgroundTint="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/medicine"
                app:layout_constraintVertical_bias="0.669" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#66FFFFFF"
                android:text="@string/set_Medication_btn"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:tint="@color/black" />

        </FrameLayout>

        <!--SET HOME BUTTON -->
        <FrameLayout
            android:id="@+id/set_Home"
            android:layout_width="380dp"
            android:layout_height="160dp"
            android:layout_marginBottom="25dp">

            <ImageButton
                android:id="@+id/set_Home_btn"
                android:layout_width="380dp"
                android:layout_height="160dp"
                android:backgroundTint="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/home"
                app:layout_constraintVertical_bias="0.412" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#66FFFFFF"
                android:text="@string/set_Home_btn"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:tint="@color/black" />

        </FrameLayout>
    </LinearLayout>
</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>